--- a/index.html
+++ b/index.html
@@ -7,14 +7,25 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     </head>
     <body>
-        <header class="container-fluid d-flex justify-content-center py-3" style="background-color:rgb(250, 235, 235);">
-            <ul class="nav nav-pills">
-                <li class="nav-item px-5 border-end border-secondary"><a href="#" class="nav-link border border-primary active">Home</a></li>
-                <li class="nav-item px-5 border-end border-secondary"><a href="#" class="nav-link border border-primary">Features</a></li>
-                <li class="nav-item px-5 border-end border-secondary"><a href="#" class="nav-link border border-primary">Pricing</a></li>
-                <li class="nav-item px-5 border-end border-secondary"><a href="#" class="nav-link border border-primary">FAQs</a></li>
-                <li class="nav-item px-5"><a href="#" class="nav-link border border-primary">About</a></li>
-            </ul>
+        <header class="navbar py-3" style="background-color:rgb(250, 235, 235);">
+            <div class="container-fluid d-flex justify-content-center">
+                <div class="d-lg-none d-flex">
+                    <a class="navbar-brand">Menu</a>
+                    <button class="navbar-toggler collapsed" data-bs-toggle="collapse" data-bs-target="#navbarsExample01">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+                <div class="nav navbar-collapse collapse d-lg-flex justify-content-center" id="navbarsExample01">
+                    <ul class="nav nav-pills d-block d-lg-flex text-center">
+                        <hr>
+                        <li class="nav-item px-5 py-lg-0 py-2"><a href="#" class="nav-link border border-primary active">Home</a></li>
+                        <li class="nav-item px-5 py-lg-0 py-2"><a href="#" class="nav-link border border-primary">Features</a></li>
+                        <li class="nav-item px-5 py-lg-0 py-2"><a href="#" class="nav-link border border-primary">Pricing</a></li>
+                        <li class="nav-item px-5 py-lg-0 py-2"><a href="#" class="nav-link border border-primary">FAQs</a></li>
+                        <li class="nav-item px-5 py-lg-0 py-2"><a href="#" class="nav-link border border-primary">About</a></li>
+                    </ul-->
+                </div>
+            </div>
         </header>
 
         <main>
@@ -24,39 +35,201 @@
                     <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" class=""></button>
                 </div>
 
-                <div class="carousel-inner">
+                <div class="carousel-inner" width="500px">
                     <div class="carousel-item active">
-                        <img src="img/R.jpg" alt="obrázek nenalezen" width="100%" height="700px">
+                        <img src="img/R.jpg" alt="obrázek nenalezen" class="img-fluid" width="100%" height="700px">
                         <div class="container">
                             <div class="carousel-caption text-start">
-                                <h1>Toyota Celica</h1>
-                                <p>Toyota Celica is a sports compact coupe built by Toyota from 1971 to 2006.</p>
-                                <p><a class="btn btn-lg btn-success" href="#">Check statistics</a></p>
+                                <div class="d-lg-block d-none">
+                                    <h1>Toyota Celica T Sport</h1>
+                                    <p>Toyota Celica is a sports compact coupe built by Toyota from 1971 to 2006.</p>
+                                </div>
+                                <p class="text-lg-start text-center"><a class="btn btn-lg btn-success" data-bs-target="#modal1" data-bs-toggle="modal">Check statistics</a></p>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="img/R2.jpg" alt="obrázek nenalezen" width="100%" height="700px">
+                        <img src="img/R2.jpg" alt="obrázek nenalezen" class="img-fluid" width="100%" height="700px">
                         <div class="container">
                             <div class="carousel-caption text-end">
-                                <h1>Toyota FT-1</h1>
-                                <p>The Toyota FT-1 is a 'pure performance dream' concept model created by CALTY Design.</p>
-                                <p><a class="btn btn-lg btn-success" href="#">Check statistics</a></p>
+                                <div class="d-lg-block d-none">
+                                    <h1>Toyota FT-1</h1>
+                                    <p>The Toyota FT-1 is a 'pure performance dream' concept model created by CALTY Design.</p>
+                                </div>
+                                <p class="text-lg-end text-center"><a class="btn btn-lg btn-success" data-bs-target="#modal2" data-bs-toggle="modal">Check statistics</a></p>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+                <button class="carousel-control-prev my-4" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon"></span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+                <button class="carousel-control-next my-4" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
                     <span class="carousel-control-next-icon"></span>
                 </button>
             </div>
 
+            <div>
+                <div class="modal fade pe-3" id="modal1">
+                    <div class="modal-dialog modal-content">
+                        <div class="modal-header justify-content-center">
+                            <h3 class="modal-title">Toyota Celica T Sport</h3>
+                        </div>
+                        <div class="modal-body mx-3">
+                            <div class="row border border-secondary">
+                                <div class="col-6 border-end border-secondary">
+                                    Production start
+                                </div>
+                                <div class="col-6 text-center">
+                                    1999
+                                </div>
+                            </div>
+                            <div class="row border border-secondary">
+                                <div class="col-6 border-end border-secondary">
+                                    Top speed
+                                </div>
+                                <div class="col-6 text-center">
+                                    225 km/h
+                                </div>
+                            </div>
+                            <div class="row border border-secondary">
+                                <div class="col-6 border-end border-secondary">
+                                    Fuel consumption
+                                </div>
+                                <div class="col-6 text-center">
+                                    14 km/l
+                                </div>
+                            </div>
+                            <div class="row border border-secondary">
+                                <div class="col-6 border-end border-secondary">
+                                    Weight
+                                </div>
+                                <div class="col-6 text-center">
+                                    1,115 kg
+                                </div>
+                            </div>
+                            <div class="row border border-secondary">
+                                <div class="col-6 border-end border-secondary">
+                                    Average price
+                                </div>
+                                <div class="col-6 text-center">
+                                    14,500 eur
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal fade pe-3" id="modal2">
+                    <div class="modal-dialog modal-content">
+                        <div class="modal-header">
+                            <h3 class="modal-title">Toyota FT-1</h3>
+                        </div>
+                        <div class="modal-body mx-3">
+                            <div class="row border border-secondary">
+                                <div class="col-6 border-end border-secondary">
+                                    Production start
+                                </div>
+                                <div class="col-6 text-center">
+                                    2014
+                                </div>
+                            </div>
+                            <div class="row border border-secondary">
+                                <div class="col-6 border-end border-secondary">
+                                    Top speed
+                                </div>
+                                <div class="col-6 text-center">
+                                    313 km/h
+                                </div>
+                            </div>
+                            <div class="row border border-secondary">
+                                <div class="col-6 border-end border-secondary">
+                                    Fuel consumption
+                                </div>
+                                <div class="col-6 text-center">
+                                    Unknown
+                                </div>
+                            </div>
+                            <div class="row border border-secondary">
+                                <div class="col-6 border-end border-secondary">
+                                    Weight
+                                </div>
+                                <div class="col-6 text-center">
+                                    1,320 kg
+                                </div>
+                            </div>
+                            <div class="row border border-secondary">
+                                <div class="col-6 border-end border-secondary">
+                                    Average price
+                                </div>
+                                <div class="col-6 text-center">
+                                    60,100 eur
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="container py-4">
+                <h1 class="display-1 text-center">
+                    Certified used car dealer
+                </h1>
+            </div>
 
+            <div class="container">
+                <div class="row">
+                    <div class="accordion accordion-flush col-6 border border-2 p-4">
+                        <div class="accordion-item py-1">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#First">
+                                    Advantageous purchase of cars, comfortable and worry-free
+                                </button>
+                            </h2>
+                            <div class="accordion-collapse collapse" id="First">
+                                <div class="accordion-body">
+                                    Are you deciding to sell your car for cash or exchange it for a new one? Take advantage of one of our offered options and we will reliably handle all other administration for you. Whether you decide to buy the car for cash, trade-in or consignment sale, you are always sure of the highest possible purchase price, fast processing and fair dealing. We will arrange the purchase even if the car is subject to leasing or credit. We will take over your financial obligation to the bank and buy the car without any problems.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item py-1">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#Second">
+                                    Pre-sales control
+                                </button>
+                            </h2>
+                            <div class="accordion-collapse collapse" id="Second">
+                                <div class="accordion-body">
+                                    All our vehicles undergo a very thorough standardized pre-sales inspection. Therefore, you can always rely on the technical and legal guarantees of your car. In addition, you have the opportunity to verify the technical condition of the car before purchasing it with the assistance of your mechanic.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item py-1">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#Third">
+                                    Car financing, hire purchase car
+                                </button>
+                            </h2>
+                            <div class="accordion-collapse collapse" id="Third">
+                                <div class="accordion-body">
+                                    Everyone can choose from the offer of car purchase financing. Thanks to cooperation with multiple financial partners, we can offer you a wide range of products and recommend the most suitable one for you.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            
         </main>
+
+
 
         <footer class="container">
             <hr class="featurette-divider">
