--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     </head>
     <body>
-        <header class="navbar py-3" style="background-color:rgb(250, 235, 235);">
+        <header class="navbar py-3 border-bottom border-secondary" style="background-image: url(img/bg.jpg);">
             <div class="container-fluid d-flex justify-content-center">
                 <div class="d-lg-none d-flex">
-                    <a class="navbar-brand">Menu</a>
-                    <button class="navbar-toggler collapsed" data-bs-toggle="collapse" data-bs-target="#navbarsExample01">
+                    <a class="navbar-brand text-primary">Menu</a>
+                    <button class="navbar-toggler collapsed bg-primary" data-bs-toggle="collapse" data-bs-target="#navbarsExample01">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                 </div>
                 <div class="nav navbar-collapse collapse d-lg-flex justify-content-center" id="navbarsExample01">
                     <ul class="nav nav-pills d-block d-lg-flex text-center">
                         <hr>
-                        <li class="nav-item px-5 py-lg-0 py-2"><a href="#" class="nav-link border border-primary active">Home</a></li>
-                        <li class="nav-item px-5 py-lg-0 py-2"><a href="#" class="nav-link border border-primary">Features</a></li>
-                        <li class="nav-item px-5 py-lg-0 py-2"><a href="#" class="nav-link border border-primary">Pricing</a></li>
-                        <li class="nav-item px-5 py-lg-0 py-2"><a href="#" class="nav-link border border-primary">FAQs</a></li>
-                        <li class="nav-item px-5 py-lg-0 py-2"><a href="#" class="nav-link border border-primary">About</a></li>
+                        <li class="nav-item px-4 py-lg-0 py-2"><a href="#" class="nav-link border border-primary active">Home</a></li>
+                        <li class="nav-item px-4 py-lg-0 py-2"><a href="#" class="nav-link border border-primary">Features</a></li>
+                        <li class="nav-item px-4 py-lg-0 py-2"><a href="#" class="nav-link border border-primary">Pricing</a></li>
+                        <li class="nav-item px-4 py-lg-0 py-2"><a href="#" class="nav-link border border-primary">FAQs</a></li>
+                        <li class="nav-item px-4 py-lg-0 py-2"><a href="#" class="nav-link border border-primary">About</a></li>
                     </ul-->
                 </div>
             </div>
@@ -184,8 +184,11 @@
             </div>
 
             <div class="container">
-                <div class="row">
-                    <div class="accordion accordion-flush col-6 border border-2 p-4">
+                <div class="row d-md-flex d-block">
+                    <div class="accordion accordion-flush col-md-6 border border-2 p-4">
+                        <h1 class="text-center py-3 display-6 fst-italic">
+                            Why us?
+                        </h1>
                         <div class="accordion-item py-1">
                             <h2 class="accordion-header">
                                 <button class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#First">
@@ -223,13 +226,106 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-6 border border-2 p-4">
+                        <h1 class="text-center py-3 display-6 fst-italic">
+                            Our available car types
+                        </h1>
+                        <ul class="list-group">
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                SUV and Combi
+                                <span class="badge bg-primary rounded-pill">14</span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                Sport cars
+                                <span class="badge bg-primary rounded-pill">21</span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                Jeeps and offroads
+                                <span class="badge bg-primary rounded-pill">10</span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                Luxury cars
+                                <span class="badge bg-primary rounded-pill">25</span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                Seedans and crossovers
+                                <span class="badge bg-primary rounded-pill">18</span>
+                            </li>
+                          </ul>
+                    </div>
                 </div>
             </div>
 
-            
+            <div class="container">
+                <div class="p-4 mt-5">
+                    <h1 class="text-center py-3 display-4">
+                        We recommend for this week
+                    </h1>
+                    <table class="table text-lg-start text-center">
+                        <thead>
+                            <tr class="table-dark display-6 border border-dark d-lg-table-row d-grid">
+                                <th>Model</th>
+                                <th>Photo</th>
+                                <th>Price</th>
+                                <th>Status</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="table-success align-middle fw-bold fs-1 border border-dark d-lg-table-row d-grid">
+                                <td>Acura TLX</td>
+                                <td><img src="img/c1.jpg" width="200px" height="150px"></td>
+                                <td>30.047 eur</td>
+                                <td>Avaliable</td>
+                            </tr>
+                            <tr class="table-success align-middle fw-bold fs-1 border border-dark d-lg-table-row d-grid">
+                                <td>Chevrolet Equinox</td>
+                                <td><img src="img/c2.jpg" width="200px" height="150px"></td>
+                                <td>28.044 eur</td>
+                                <td>Avaliable</td>
+                            </tr>
+                            <tr class="table-success align-middle fw-bold fs-1 border border-dark d-lg-table-row d-grid">
+                                <td>Nissan Murano SV</td>
+                                <td><img src="img/c3.jpg" width="200px" height="150px"></td>
+                                <td>23.538 eur</td>
+                                <td>Avaliable</td>
+                            </tr>
+                             <tr class="table-danger align-middle fw-bold fs-1 border border-dark d-lg-table-row d-grid">
+                                <td>Nissan Versa SV</td>
+                                <td><img src="img/c4.jpg" width="200px" height="150px"></td>
+                                <td>20.031 eur</td>
+                                <td>Unavaliable</td>
+                            </tr>
+                            <tr class="table-success align-middle fw-bold fs-1 border border-dark d-lg-table-row d-grid">
+                                <td>Toyota Tacoma</td>
+                                <td><img src="img/c5.jpg" width="200px" height="150px"></td>
+                                <td>48.078 eur</td>
+                                <td>Avaliable</td>
+                            </tr>
+                            <tr class="table-danger align-middle fw-bold fs-1 border border-dark d-lg-table-row d-grid">
+                                <td>Honda Odyssey</td>
+                                <td><img src="img/c6.jpg" width="200px" height="150px"></td>
+                                <td>28.093 eur</td>
+                                <td>Unavaliable</td>
+                            </tr>
+                            <tr class="table-danger align-middle fw-bold fs-1 border border-dark d-lg-table-row d-grid">
+                                <td>Hyundai Elantra</td>
+                                <td><img src="img/c7.jpg" width="200px" height="150px"></td>
+                                <td>14.183 eur</td>
+                                <td>Unavaliable</td>
+                            </tr>
+                            <tr class="table-success align-middle fw-bold fs-1 border border-dark d-lg-table-row d-grid">
+                                <td>Tesla Model 3</td>
+                                <td><img src="img/c8.jpg" width="200px" height="150px"></td>
+                                <td>51.082 eur</td>
+                                <td>Avaliable</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+
         </main>
-
-
 
         <footer class="container">
             <hr class="featurette-divider">
@@ -239,10 +335,4 @@
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     </body>
-
-    <!--style>
-        *{
-            border: 1px solid red;
-        }
-    </style-->
 </html>
