--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="nav navbar-collapse collapse d-lg-flex justify-content-center" id="navbarsExample01">
                     <ul class="nav nav-pills d-block d-lg-flex text-center">
-                        <hr>
+                        <hr class="border border-primary">
                         <li class="nav-item px-4 py-lg-0 py-2"><a href="#" class="nav-link border border-primary active">Home</a></li>
                         <li class="nav-item px-4 py-lg-0 py-2"><a href="#" class="nav-link border border-primary">Features</a></li>
                         <li class="nav-item px-4 py-lg-0 py-2"><a href="#" class="nav-link border border-primary">Pricing</a></li>
@@ -228,7 +228,7 @@
                     </div>
                     <div class="col-md-6 border border-2 p-4">
                         <h1 class="text-center py-3 display-6 fst-italic">
-                            Our available car types
+                            Available car types
                         </h1>
                         <ul class="list-group">
                             <li class="list-group-item d-flex justify-content-between align-items-center">
@@ -275,56 +275,127 @@
                                 <td>Acura TLX</td>
                                 <td><img src="img/c1.jpg" width="200px" height="150px"></td>
                                 <td>30.047 eur</td>
-                                <td>Avaliable</td>
+                                <td>Available</td>
                             </tr>
                             <tr class="table-success align-middle fw-bold fs-1 border border-dark d-lg-table-row d-grid">
                                 <td>Chevrolet Equinox</td>
                                 <td><img src="img/c2.jpg" width="200px" height="150px"></td>
                                 <td>28.044 eur</td>
-                                <td>Avaliable</td>
+                                <td>Available</td>
                             </tr>
                             <tr class="table-success align-middle fw-bold fs-1 border border-dark d-lg-table-row d-grid">
                                 <td>Nissan Murano SV</td>
                                 <td><img src="img/c3.jpg" width="200px" height="150px"></td>
                                 <td>23.538 eur</td>
-                                <td>Avaliable</td>
+                                <td>Available</td>
                             </tr>
                              <tr class="table-danger align-middle fw-bold fs-1 border border-dark d-lg-table-row d-grid">
                                 <td>Nissan Versa SV</td>
                                 <td><img src="img/c4.jpg" width="200px" height="150px"></td>
                                 <td>20.031 eur</td>
-                                <td>Unavaliable</td>
+                                <td>Unavailable</td>
                             </tr>
                             <tr class="table-success align-middle fw-bold fs-1 border border-dark d-lg-table-row d-grid">
                                 <td>Toyota Tacoma</td>
                                 <td><img src="img/c5.jpg" width="200px" height="150px"></td>
                                 <td>48.078 eur</td>
-                                <td>Avaliable</td>
+                                <td>Available</td>
                             </tr>
                             <tr class="table-danger align-middle fw-bold fs-1 border border-dark d-lg-table-row d-grid">
                                 <td>Honda Odyssey</td>
                                 <td><img src="img/c6.jpg" width="200px" height="150px"></td>
                                 <td>28.093 eur</td>
-                                <td>Unavaliable</td>
+                                <td>Unavailable</td>
                             </tr>
                             <tr class="table-danger align-middle fw-bold fs-1 border border-dark d-lg-table-row d-grid">
                                 <td>Hyundai Elantra</td>
                                 <td><img src="img/c7.jpg" width="200px" height="150px"></td>
                                 <td>14.183 eur</td>
-                                <td>Unavaliable</td>
+                                <td>Unavailable</td>
                             </tr>
                             <tr class="table-success align-middle fw-bold fs-1 border border-dark d-lg-table-row d-grid">
                                 <td>Tesla Model 3</td>
                                 <td><img src="img/c8.jpg" width="200px" height="150px"></td>
                                 <td>51.082 eur</td>
-                                <td>Avaliable</td>
+                                <td>Available</td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
             </div>
 
-
+            <div class="container py-3">
+                <h1 class="display-3 fw-2 text-center pb-4">
+                    Car fast:
+                </h1>
+                <h3 class="fw-2 text-center pb-4">
+                    Quick selection from over 6000 cars / Quick financing / Quick and minimal paperwork
+                </h3>
+                <div class="row row-cols-xxl-6 row-cols-lg-3 row-cols-md-2 row-cols-1 text-center">
+                    <p class="col">
+                        <button class="btn btn-success" data-bs-toggle="collapse" data-bs-target="#Collapse1">Quick selection</button>
+                    </p>
+                    <p class="col">
+                        <button class="btn btn-success" data-bs-toggle="collapse" data-bs-target="#Collapse2">Quick booking</button>
+                    </p>
+                    <p class="col">
+                        <button class="btn btn-success" data-bs-toggle="collapse" data-bs-target="#Collapse3">Quick financing</button>
+                    </p>
+                    <p class="col">
+                        <button class="btn btn-success" data-bs-toggle="collapse" data-bs-target="#Collapse4">Quick manage</button>
+                    </p>
+                    <p class="col">
+                        <button class="btn btn-success" data-bs-toggle="collapse" data-bs-target="#Collapse5">Quick car change</button>
+                    </p>
+                    <p class="col">
+                        <button class="btn btn-success" data-bs-toggle="collapse" data-bs-target="#Collapse6">Quick delivery</button>
+                    </p>
+                </div>
+                <div class="row row-cols-xxl-6 row-cols-lg-3 row-cols-md-2 row-cols-1">
+                    <div class="col py-2">
+                        <div class="collapse" id="Collapse1">
+                            <div class="card card-body">
+                                From the maximum offer more than 6000 cars.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col py-2">
+                        <div class="collapse" id="Collapse2">
+                            <div class="card card-body">
+                                Reserve the selected car online with a financial advantage.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col py-2">
+                        <div class="collapse" id="Collapse3">
+                            <div class="card card-body">
+                                We set your monthly payments easy and fast low.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col py-2">
+                        <div class="collapse" id="Collapse4">
+                            <div class="card card-body">
+                                We will handle all the needed paperwork for your car.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col py-2">
+                        <div class="collapse" id="Collapse5">
+                            <div class="card card-body">
+                                You can the purchased car exchange within 10 days for another.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col py-2">
+                        <div class="collapse" id="Collapse6">
+                            <div class="card card-body">
+                                You will get your new car within 7 days with guarantees.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
 
         <footer class="container">
