Response for buttons, second site
created second site with tooltips and scrollspy

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Autobazar</title>
+        <title>Autobazar - Home</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" type="image/x-icon" href="img/favicon.ico">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -11,19 +12,19 @@
             <div class="container-fluid d-flex justify-content-center">
                 <div class="d-lg-none d-flex">
                     <a class="navbar-brand text-primary">Menu</a>
-                    <button class="navbar-toggler collapsed bg-primary" data-bs-toggle="collapse" data-bs-target="#navbarsExample01">
+                    <button class="navbar-toggler collapsed bg-primary" data-bs-toggle="collapse" data-bs-target="#navbars1">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                 </div>
-                <div class="nav navbar-collapse collapse d-lg-flex justify-content-center" id="navbarsExample01">
+                <div class="nav navbar-collapse collapse d-lg-flex justify-content-center" id="navbars1">
                     <ul class="nav nav-pills d-block d-lg-flex text-center">
-                        <hr class="border border-primary">
-                        <li class="nav-item px-4 py-lg-0 py-2"><a href="#" class="nav-link border border-primary active">Home</a></li>
+                        <hr class="border border-primary border-2 d-lg-none">
+                        <li class="nav-item px-4 py-lg-0 py-2"><a href="index.html" class="nav-link border border-primary active">Home</a></li>
                         <li class="nav-item px-4 py-lg-0 py-2"><a href="#" class="nav-link border border-primary">Features</a></li>
                         <li class="nav-item px-4 py-lg-0 py-2"><a href="#" class="nav-link border border-primary">Pricing</a></li>
-                        <li class="nav-item px-4 py-lg-0 py-2"><a href="#" class="nav-link border border-primary">FAQs</a></li>
+                        <li class="nav-item px-4 py-lg-0 py-2"><a href="faq.html" class="nav-link border border-primary">FAQs</a></li>
                         <li class="nav-item px-4 py-lg-0 py-2"><a href="#" class="nav-link border border-primary">About</a></li>
-                    </ul-->
+                    </ul>
                 </div>
             </div>
         </header>
@@ -44,7 +45,8 @@
                                     <h1>Toyota Celica T Sport</h1>
                                     <p>Toyota Celica is a sports compact coupe built by Toyota from 1971 to 2006.</p>
                                 </div>
-                                <p class="text-lg-start text-center"><a class="btn btn-lg btn-success" data-bs-target="#modal1" data-bs-toggle="modal">Check statistics</a></p>
+                                <p class="text-lg-start text-center"><a class="btn btn-lg btn-success d-lg-inline-block d-none" data-bs-target="#modal1" data-bs-toggle="modal">Check statistics</a></p>
+                                <p class="text-lg-start text-center"><a class="btn btn-sm btn-success d-lg-none d-lg-inline-block" data-bs-target="#modal1" data-bs-toggle="modal">Check statistics</a></p>
                             </div>
                         </div>
                     </div>
@@ -56,7 +58,8 @@
                                     <h1>Toyota FT-1</h1>
                                     <p>The Toyota FT-1 is a 'pure performance dream' concept model created by CALTY Design.</p>
                                 </div>
-                                <p class="text-lg-end text-center"><a class="btn btn-lg btn-success" data-bs-target="#modal2" data-bs-toggle="modal">Check statistics</a></p>
+                                <p class="text-lg-end text-center"><a class="btn btn-lg btn-success d-lg-inline-block d-none" data-bs-target="#modal2" data-bs-toggle="modal">Check statistics</a></p>
+                                <p class="text-lg-end text-center"><a class="btn btn-sm btn-success d-lg-none d-inline-block" data-bs-target="#modal2" data-bs-toggle="modal">Check statistics</a></p>
                             </div>
                         </div>
                     </div>
