--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     </head>
     <body>
-        <header class="navbar py-3 border-bottom border-secondary" style="background-image: url(img/bg.jpg);">
+        <header class="navbar py-3 border-bottom border-secondary sticky-top" style="background-image: url(img/bg.jpg);">
             <div class="container-fluid d-flex justify-content-center">
                 <div class="d-lg-none d-flex">
                     <a class="navbar-brand text-primary">Menu</a>
@@ -20,7 +20,7 @@
                     <ul class="nav nav-pills d-block d-lg-flex text-center">
                         <hr class="border border-primary border-2 d-lg-none">
                         <li class="nav-item px-4 py-lg-0 py-2"><a href="index.html" class="nav-link border border-primary active">Home</a></li>
-                        <li class="nav-item px-4 py-lg-0 py-2"><a href="#" class="nav-link border border-primary">Features</a></li>
+                        <li class="nav-item px-4 py-lg-0 py-2"><a href="features.html" class="nav-link border border-primary">Features</a></li>
                         <li class="nav-item px-4 py-lg-0 py-2"><a href="#" class="nav-link border border-primary">Pricing</a></li>
                         <li class="nav-item px-4 py-lg-0 py-2"><a href="faq.html" class="nav-link border border-primary">FAQs</a></li>
                         <li class="nav-item px-4 py-lg-0 py-2"><a href="#" class="nav-link border border-primary">About</a></li>
