--- a/faq.html
+++ b/faq.html
@@ -83,25 +83,33 @@
                 </div>
             </div>
 
-            <div class="container mt-3 border">
-                <div class="border">
-                    <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="right" title="Right">
-                        Tooltip
-                    </button>
-                    <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="top" title="Top">
-                        Tooltip
-                    </button>
-                    <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Bottom">
-                        Tooltip
-                    </button>
-                    <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="left" title="Left">
-                        Tooltip
-                    </button>
-                </div>
+            <div class="container mt-3">
+                <ul class="nav d-flex justify-content-evenly">
+                    <li>
+                        <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="right" title="Right">
+                            Tooltip
+                        </button>
+                    </li>
+                    <li>
+                        <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="top" title="Top">
+                            Tooltip
+                        </button>
+                    </li>
+                    <li>
+                        <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Bottom">
+                            Tooltip
+                        </button>
+                    </li>
+                    <li>
+                        <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="left" title="Left">
+                            Tooltip
+                        </button>
+                    </li>
+                </ul>
             </div>
         </main>
             
-        <footer class="container sticky-botton">
+        <footer class="container fixed-bottom">
             <hr class="featurette-divider">
             <p class="float-end"><a href="#">Back to top</a></p>
             <p>© 2022 Company, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
