--- a/faq.html
+++ b/faq.html
@@ -29,7 +29,18 @@
             </div>
         </header>
 
-        <main>  
+        <main>
+            <div class="py-3 px-5">
+                <div class="container toast align-items-center text-bg-primary border-0 float-end" id="toast">
+                    <div class="d-flex">
+                        <div class="toast-body">
+                            Welcome to our car bazar!
+                        </div>
+                        <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+                    </div>
+                </div>
+            </div>
+
             <div class="container pt-5">
                 <div class="row border" style="height: 200px; overflow-y: scroll;">
                     <div class="col-4 border">
@@ -119,7 +130,7 @@
         <script>
             const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
             const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
-            const toastSelector = document.getElementById('liveToast')
+            const toastSelector = document.getElementById('toast')
             const toast = new bootstrap.Toast(toastSelector)
             toast.show()
         </script>
