--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
         </header>
 
         <main>
+            <div class="fixed-bottom px-5 py-3">
+                <div class="container toast align-items-center text-bg-primary border-0 float-end" id="toast">
+                    <div class="d-flex">
+                        <div class="toast-body">
+                            Welcome to our car bazar!
+                        </div>
+                        <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+                    </div>
+                </div>
+            </div>
+
             <div id="myCarousel" class="container carousel slide justify-content-center py-4" data-bs-ride="carousel">
                 <div class="carousel-indicators pb-4">
                     <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"></button>
@@ -408,5 +419,10 @@
         </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+        <script>
+            const toastSelector = document.getElementById('toast')
+            const toast = new bootstrap.Toast(toastSelector)
+            toast.show()
+        </script>
     </body>
 </html>
